--- a/Template/index.html
+++ b/Template/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <b>Pop-Apple Github Connection Site</b>
+        <b>Pop-Apple    Humanities    Notes</b>
     </main>
 </body>
 </html>
